--- a/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
+++ b/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
@@ -114,12 +114,16 @@
     <Compile Include="Common\Models\EntityClassFile.cs" />
     <Compile Include="Common\Models\EntityMap.cs" />
     <Compile Include="Common\Models\EntityModel.cs" />
+    <Compile Include="Common\Models\EntityProfile.cs" />
     <Compile Include="Common\Models\MemberInfo.cs" />
+    <Compile Include="Common\Models\ProfileMap.cs" />
     <Compile Include="Common\Models\ProjectMapping.cs" />
     <Compile Include="Common\Models\ProjectFolder.cs" />
     <Compile Include="Common\Models\ResourceClassFile.cs" />
     <Compile Include="Common\Models\ResourceMap.cs" />
     <Compile Include="Common\Models\ResourceModel.cs" />
+    <Compile Include="Common\Models\ResourceProfile.cs" />
+    <Compile Include="Common\Models\ResourceType.cs" />
     <Compile Include="Common\Models\ServerConfig.cs" />
     <Compile Include="Common\Models\Snipit.cs" />
     <Compile Include="Common\Models\SnipitType.cs" />
@@ -133,6 +137,12 @@
     <Compile Include="Common\Wizards\ControllerWizard.cs" />
     <Compile Include="Common\Wizards\EntityWizard.cs" />
     <Compile Include="Common\Wizards\FullStackControllerWizard.cs" />
+    <Compile Include="Common\Wizards\MapEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Common\Wizards\MapEditor.Designer.cs">
+      <DependentUpon>MapEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Common\Wizards\MapperWizard.cs" />
     <Compile Include="Common\Wizards\ResourceWizard.cs" />
     <Compile Include="Common\Wizards\ValidationWizard.cs" />
@@ -162,8 +172,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -224,6 +236,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <None Include="EditButton.png" />
     <Content Include="ico128.png" />
     <Content Include="LICENSE.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -233,6 +246,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="Resources\COFRSToolsMenu.png" />
+    <Content Include="Resources\EditAutoMapperCommand.png" />
     <Content Include="StartupGuide.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
@@ -262,6 +277,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Common\Forms\UserInputValidation.resx">
       <DependentUpon>UserInputValidation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Common\Wizards\MapEditor.resx">
+      <DependentUpon>MapEditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserInputProject.resx">
       <DependentUpon>UserInputProject.cs</DependentUpon>
