--- a/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
+++ b/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
@@ -192,8 +192,8 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory">
       <Version>5.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Shell.14.0">
-      <Version>14.3.25407</Version>
+    <PackageReference Include="Microsoft.VisualStudio.Validation">
+      <Version>17.0.34</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.11.35">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -292,6 +292,12 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\COFRSCoreCommandsPackage\COFRSCoreCommandsPackage.csproj">
+      <Project>{3BEDEB33-A22E-4B70-B219-1CA7CEF73B08}</Project>
+      <Name>COFRSCoreCommandsPackage</Name>
+      <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3bPkgdefProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
+      <IncludeOutputGroupsInVSIXLocalOnly>DebugSymbolsProjectOutputGroup%3b</IncludeOutputGroupsInVSIXLocalOnly>
+    </ProjectReference>
     <ProjectReference Include="..\COFRSCoreControllerTemplate\COFRSCoreControllerTemplate.csproj">
       <Project>{D7E7E13E-DC23-49AE-9FE2-A71483170879}</Project>
       <Name>COFRSCoreControllerTemplate</Name>
