--- a/Source/COFRSCoreCommandsPackage/COFRSCoreCommandsPackage.csproj
+++ b/Source/COFRSCoreCommandsPackage/COFRSCoreCommandsPackage.csproj
@@ -51,17 +51,30 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="COFRSMainMenu.cs" />
-    <Compile Include="COFRSMainMenuPackage.cs" />
+    <Compile Include="COFRSMenu.cs" />
+    <Compile Include="COFRSMenuPackage.cs" />
     <Compile Include="Forms\AddCollectionDialog.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\AddCollectionDialog.Designer.cs">
       <DependentUpon>AddCollectionDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\MapEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MapEditor.Designer.cs">
+      <DependentUpon>MapEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Mapper.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Mapper.Designer.cs">
+      <DependentUpon>Mapper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\DBAuthentication.cs" />
     <Compile Include="Models\DBColumn.cs" />
     <Compile Include="Models\DBServer.cs" />
+    <Compile Include="Models\DBServerType.cs" />
     <Compile Include="Models\ElementType.cs" />
     <Compile Include="Models\EntityMap.cs" />
     <Compile Include="Models\EntityModel.cs" />
@@ -69,20 +82,25 @@
     <Compile Include="Models\NameNormalizer.cs" />
     <Compile Include="Models\ProfileMap.cs" />
     <Compile Include="Models\ProjectFolder.cs" />
+    <Compile Include="Models\ProjectMapping.cs" />
     <Compile Include="Models\ResourceMap.cs" />
     <Compile Include="Models\ResourceModel.cs" />
     <Compile Include="Models\ResourceProfile.cs" />
     <Compile Include="Models\ResourceType.cs" />
     <Compile Include="Models\ServerConfig.cs" />
-    <Compile Include="Models\DBServerType.cs" />
-    <Compile Include="Models\ProjectMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SourceConverter.cs" />
+    <Compile Include="Utilities\StandardUtils.cs" />
+    <Compile Include="Utilities\StringExtensions.cs" />
+    <Compile Include="VSPackage.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VSPackage.resx</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
-    <None Include="source.extension.vsixmanifest">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK">
@@ -96,7 +114,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <VSCTCompile Include="COFRSMainMenuPackage.vsct">
+    <VSCTCompile Include="COFRSMenuPackage.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
     </VSCTCompile>
   </ItemGroup>
@@ -104,14 +122,32 @@
     <EmbeddedResource Include="Forms\AddCollectionDialog.resx">
       <DependentUpon>AddCollectionDialog.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MapEditor.resx">
+      <DependentUpon>MapEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Mapper.resx">
+      <DependentUpon>Mapper.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VSPackage.resx">
       <MergeWithCTO>true</MergeWithCTO>
       <ManifestResourceName>VSPackage</ManifestResourceName>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <SubType>Designer</SubType>
+      <LastGenOutput>VSPackage.Designer.cs</LastGenOutput>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\COFRS.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="Resources\EditButton.png" />
+    <Content Include="Resources\ico128.png" />
     <Content Include="Resources\COFRSMainMenu.png" />
     <Content Include="Resources\COFRSMainMenuPackage.ico" />
+    <None Include="source.extension.vsixmanifest">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
