--- a/Source/COFRSCoreCommon/COFRSCoreCommon.csproj
+++ b/Source/COFRSCoreCommon/COFRSCoreCommon.csproj
@@ -51,6 +51,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
