--- a/Source/COFRSCoreCommon/COFRSCoreCommon.csproj
+++ b/Source/COFRSCoreCommon/COFRSCoreCommon.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -61,6 +63,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\MapEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MapEditor.Designer.cs">
+      <DependentUpon>MapEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Mapper.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Mapper.Designer.cs">
+      <DependentUpon>Mapper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\DBAuthentication.cs" />
     <Compile Include="Models\DBColumn.cs" />
     <Compile Include="Models\DBServer.cs" />
@@ -70,6 +84,11 @@
     <Compile Include="Models\EntityMap.cs" />
     <Compile Include="Models\EntityModel.cs" />
     <Compile Include="Models\EntityProfile.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Utilities\NameNormalizer.cs" />
     <Compile Include="Models\ProfileMap.cs" />
     <Compile Include="Models\ProjectFolder.cs" />
@@ -81,11 +100,32 @@
     <Compile Include="Models\ServerConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\COFRSCommonUtilities.cs" />
+    <Compile Include="Utilities\SourceConverter.cs" />
     <Compile Include="Utilities\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="COFRSCommonKey.pfx" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Forms\MapEditor.resx">
+      <DependentUpon>MapEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Mapper.resx">
+      <DependentUpon>Mapper.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Resources\COFRS.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="Resources\EditButton.png" />
+    <Content Include="Resources\ico128.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
