--- a/Source/COFRSCoreCommon/COFRSCoreCommon.csproj
+++ b/Source/COFRSCoreCommon/COFRSCoreCommon.csproj
@@ -75,6 +75,12 @@
     <Compile Include="Forms\Mapper.Designer.cs">
       <DependentUpon>Mapper.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ProgressDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ProgressDialog.Designer.cs">
+      <DependentUpon>ProgressDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\DBAuthentication.cs" />
     <Compile Include="Models\DBColumn.cs" />
     <Compile Include="Models\DBServer.cs" />
@@ -102,6 +108,8 @@
     <Compile Include="Utilities\COFRSCommonUtilities.cs" />
     <Compile Include="Utilities\SourceConverter.cs" />
     <Compile Include="Utilities\StringExtensions.cs" />
+    <Compile Include="Utilities\WindowClass.cs" />
+    <Compile Include="Utilities\WinNative.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="COFRSCommonKey.pfx" />
@@ -113,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Mapper.resx">
       <DependentUpon>Mapper.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ProgressDialog.resx">
+      <DependentUpon>ProgressDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
