--- a/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
+++ b/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
@@ -84,9 +84,34 @@
     <Compile Include="Common\Forms\UserInputResource.Designer.cs">
       <DependentUpon>UserInputResource.cs</DependentUpon>
     </Compile>
+    <Compile Include="Common\Models\DBAuthentication.cs" />
+    <Compile Include="Common\Models\DBColumn.cs" />
+    <Compile Include="Common\Models\DBServerType.cs" />
+    <Compile Include="Common\Models\DBServer.cs" />
+    <Compile Include="Common\Models\DBTable.cs" />
+    <Compile Include="Common\Models\ElementType.cs" />
+    <Compile Include="Common\Models\EntityClass.cs" />
+    <Compile Include="Common\Models\EntityMap.cs" />
+    <Compile Include="Common\Models\EntityModel.cs" />
+    <Compile Include="Common\Models\EntityProfile.cs" />
+    <Compile Include="Common\Models\ProfileMap.cs" />
+    <Compile Include="Common\Models\ProjectFolder.cs" />
+    <Compile Include="Common\Models\ProjectMapping.cs" />
+    <Compile Include="Common\Models\ResourceClass.cs" />
+    <Compile Include="Common\Models\ResourceMap.cs" />
+    <Compile Include="Common\Models\ResourceModel.cs" />
+    <Compile Include="Common\Models\ResourceProfile.cs" />
+    <Compile Include="Common\Models\ResourceType.cs" />
+    <Compile Include="Common\Models\ServerConfig.cs" />
+    <Compile Include="Common\ServiceUtilities\CodeService.cs" />
+    <Compile Include="Common\ServiceUtilities\COFRSServiceFactory.cs" />
     <Compile Include="Common\ServiceUtilities\DBHelper.cs" />
+    <Compile Include="Common\ServiceUtilities\ICodeService.cs" />
+    <Compile Include="Common\ServiceUtilities\NameNormalizer.cs" />
     <Compile Include="Common\ServiceUtilities\SourceConverter.cs" />
     <Compile Include="Common\ServiceUtilities\StandardEmitter.cs" />
+    <Compile Include="Common\ServiceUtilities\StringExtensions.cs" />
+    <Compile Include="Common\ServiceUtilities\WindowClass.cs" />
     <Compile Include="Common\Wizards\ControllerWizard.cs" />
     <Compile Include="Common\Wizards\EntityWizard.cs" />
     <Compile Include="Common\Wizards\ExampleWizard.cs" />
@@ -229,16 +254,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\COFRSCoreCommandsPackage\COFRSCoreCommandsPackage.csproj">
-      <Project>{3BEDEB33-A22E-4B70-B219-1CA7CEF73B08}</Project>
-      <Name>COFRSCoreCommandsPackage</Name>
-      <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3bPkgdefProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
-      <IncludeOutputGroupsInVSIXLocalOnly>DebugSymbolsProjectOutputGroup%3b</IncludeOutputGroupsInVSIXLocalOnly>
-    </ProjectReference>
-    <ProjectReference Include="..\COFRSCoreCommon\COFRSCoreCommon.csproj">
-      <Project>{12185790-2236-4648-A212-F1200F30788B}</Project>
-      <Name>COFRSCoreCommon</Name>
-    </ProjectReference>
     <ProjectReference Include="..\COFRSCoreControllerTemplate\COFRSCoreControllerTemplate.csproj">
       <Project>{D7E7E13E-DC23-49AE-9FE2-A71483170879}</Project>
       <Name>COFRSCoreControllerTemplate</Name>
