--- a/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
+++ b/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Common\Windows\AddConnectionDialog.xaml.cs">
       <DependentUpon>AddConnectionDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Common\Windows\ExamplesDialog.xaml.cs">
+      <DependentUpon>ExamplesDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Common\Windows\FullStackDialog.xaml.cs">
       <DependentUpon>FullStackDialog.xaml</DependentUpon>
     </Compile>
@@ -376,6 +379,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Common\Windows\COFRSNewProjectDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Common\Windows\ExamplesDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
